--- a/src/FatFoodie.IoC/FatFoodie.IoC.csproj
+++ b/src/FatFoodie.IoC/FatFoodie.IoC.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{209A4E36-B52B-4148-AADB-F7AD4C722A10}</ProjectGuid>
+    <ProjectGuid>{04B97245-CCE5-4F5F-9414-E727796F7612}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FatFoodie.IntegrationTests</RootNamespace>
-    <AssemblyName>FatFoodie.IntegrationTests</AssemblyName>
+    <RootNamespace>FatFoodie.IoC</RootNamespace>
+    <AssemblyName>FatFoodie.IoC</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,24 +30,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentAssertions, Version=4.18.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FluentAssertions.4.18.0\lib\net45\FluentAssertions.dll</HintPath>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FluentAssertions.Core, Version=4.18.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FluentAssertions.4.18.0\lib\net45\FluentAssertions.Core.dll</HintPath>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NSubstitute, Version=1.10.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NSubstitute.1.10.0.0\lib\net45\NSubstitute.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,26 +52,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SqlRecipeRepositoryTests.cs" />
+    <Compile Include="IIocAssemblyRegistrationMarker.cs" />
+    <Compile Include="Installers\ApplicationInstaller.cs" />
+    <Compile Include="Installers\MapperInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\FatFoodie.Configuration\FatFoodie.Configuration.csproj">
-      <Project>{33BD55BF-BAD2-41C8-BCF8-40FD8DD2078F}</Project>
+    <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FatFoodie.Application\FatFoodie.Application.csproj">
+      <Project>{6f6a003d-cfce-4663-ad57-f711a1bb103d}</Project>
+      <Name>FatFoodie.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FatFoodie.Configuration\FatFoodie.Configuration.csproj">
+      <Project>{33bd55bf-bad2-41c8-bcf8-40fd8dd2078f}</Project>
       <Name>FatFoodie.Configuration</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\FatFoodie.DataAccess\FatFoodie.DataAccess.csproj">
+    <ProjectReference Include="..\FatFoodie.DataAccess\FatFoodie.DataAccess.csproj">
       <Project>{fafb0246-16a4-49ff-954e-4967c2074c49}</Project>
       <Name>FatFoodie.DataAccess</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\FatFoodie.Domain\FatFoodie.Domain.csproj">
-      <Project>{ce03e715-000f-48ec-a51e-c58322948388}</Project>
-      <Name>FatFoodie.Domain</Name>
+    <ProjectReference Include="..\FatFoodie.Infrastructure\FatFoodie.Infrastructure.csproj">
+      <Project>{81b05d23-e7fc-4f56-bf2b-f68995f296b4}</Project>
+      <Name>FatFoodie.Infrastructure</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
